Adapt AddressTest for JQwik